k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-api
  namespace: prakarsa
  labels: { app: comment-api }
spec:
  replicas: 1
  selector: { matchLabels: { app: comment-api } }
  template:
    metadata: { labels: { app: comment-api } }
    spec:
      containers:
        - name: comment-api
          image: comment-api:latest  # image lokal yang kamu import ke k3s
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          # probe TCP biar aman kalau belum ada /healthz
          readinessProbe:
            tcpSocket: { port: 8080 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket: { port: 8080 }
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits:   { cpu: "500m", memory: "256Mi" }
          # (opsional) ENV dari Secret .env
