k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-api
  namespace: prakarsa
spec:
  type: ClusterIP
  selector: { app: comment-api }
  ports:
    - name: http
      port: 80
      targetPort: 8080
