k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comment-api
  namespace: prakarsa
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web   # port 80
spec:
  ingressClassName: traefik
  rules:
    - host: comment.103.171.85.49.nip.io   # ganti IP publik kamu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: comment-api
                port:
                  number: 80
